# aztekasPlots

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.github/workflows/: docs.yml  quality.yml  tests.yml
Aztekasplot/: __init__.py  main.py  model.py
Aztekasplot/utils/: __init__.py  coordinates.py  miscellaneous.py
api_reference/main/: index.html
aztekasPlot/: __init__.py  constants.py  errors.py  main.py  warnings.py
aztekasPlot/utils/: coordinates.py
aztekasPlots/: __init__.py  decorators.py  main.py
aztekasPlots/utils/: coordinates.py  miscellaneous.py
docs/: examples.md  index.md
docs/api_reference/: main.md  model.md
examples/: index.html
notebooks/: aztekasPlot.ipynb
profiling/: __init__.py  aztekasplot_profiling.py  aztekasplots_profiling.py  confprofiling.py
tests/: conftest.py  test_Aztekasplot.py  test_aztekasplot.py  test_aztekasplots.py
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/api_reference/main/: index.html
v0.3.0/css/: extra.css
v0.3.0/examples/: index.html
v0.3.0/search/: search_index.json
v0.3.1/: 404.html  index.html
v0.3.1/api_reference/main/: index.html
v0.3.1/examples/: index.html
v0.3.2/: 404.html  index.html  objects.inv
v0.3.2/api_reference/main/: index.html
v0.3.2/examples/: index.html
v0.3.2/search/: search_index.json
