[tool.poetry]
name = "Aztekasplot"
version = "0.1.0"
description = "Plotting facilities for aztekas (gr)hd simulations. - Module Aztekasplot"
authors = ["Alejandro aguayo-ortiz <aaguayoo92@ciencias.unam.mx>"]
packages = [{include="Aztekasplot"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
linecache2 = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "5.2"
black = "20.8b1"
flake8 = "3.8.4"
pre-commit = "2.8.1"
flake8-isort = "4.0.0"
flake8-docstrings = "1.5.0"
coverage = "5.3"
pytest-cov = "2.10.1"
pyinstrument = "3.3.0"
isort = "5.8.0"
mkdocs = "1.2.2"
mypy = "0.910"
memory-profiler = "0.58.0"
matplotlib = "3.3.0"
psutil = "5.8.0"
jovian = "0.2.41"
jupyterlab = "3.2.1"
ipykernel = "6.4.2"


[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = ["Aztekasplot"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
